# ftlib

./: .gitignore  .isort.cfg  .travis.yml  Dockerfile  OWNERS  Pipfile  README.md  ROADMAP.md  requirements.txt  setup.py  web.py
deploy/: Dockerfile  ftlib-rbac.yaml  ftlib-test.yaml
docs/design/: communication_library.md  consensus.md  framework.md  ftlib.md
ftlib/: __init__.py  ftlib_status.py  impl.py  rank_assign_scheme.py
ftlib/commlib/: basic_commlib.py  commlib_status.py
ftlib/commlib/dummy_nccl/: __init__.py  build_with_pybind11.sh  impl.py
ftlib/commlib/gloo/: CMakeLists.txt  Dockerfile  __init__.py  impl.py
ftlib/commlib/gloo/src/: gloo_lib.cxx
ftlib/commlib/nccl/: CMakeLists.txt  Dockerfile  Dockerfile.cn  __init__.py  impl.py
ftlib/commlib/pytorch/: __init__.py  impl.py
ftlib/consensus/: __init__.py  basic.py  basic_consensus.py  consensus_status.py
ftlib/consensus/gossip/: __init__.py  gen_shared_lib.sh  impl.py  test.py
ftlib/consensus/shared_storage/: __init__.py  impl.py  master_server.py  utils.py
ftlib/framework/: __init__.py  basic.py  framework_status.py
ftlib/framework/dummy_nccl/: CMakeLists.txt  __init__.py  impl.py
ftlib/framework/dummy_nccl/src/: fault_tolerant_lib.cxx
scripts/: setup_k8s_env.sh
test/: generic_test.py  pytorch-gossip-tricky-data.py  pytorch-gossip_test.py  pytorch_test.py
test/deprecated-tests/: generic_test.py  pytorch_test.py
test/kubernetes/: Dockerfile  ftlib-deployment.yaml
test/pytorch-gossip/: pytorch-gossip_test.py
test/tricky-data/: pytorch-gossip-tricky-data.py
(+14 files in other folders)
